[fix] (ABC-617): Fix instant scroll up when tile overflowing while dragging

--- a/src/modules/base/kanban/kanban.css
+++ b/src/modules/base/kanban/kanban.css
@@ -1,7 +1,7 @@
 .avonni-kanban__container {
     position: relative;
     overflow-x: scroll;
-
+    overflow-y: hidden;
     height: 100%;
 }
 
